# Auction-trader

./: .gitignore  PRD.md  PROJECT_INTENT.md  SPEC.md  claude.md  specv2.md
auction-trader/: HANDOFF.md  README.md  pyproject.toml
auction-trader/config/: .env.example  default.yaml
auction-trader/dashboard/: __init__.py  api.py
auction-trader/dashboard/static/: app.js  index.html  style.css
auction-trader/python/auction_trader/: __init__.py  cli.py  config.py  orchestrator.py
auction-trader/python/auction_trader/models/: __init__.py  types.py
auction-trader/python/auction_trader/services/: __init__.py  collector.py  execution.py  position_manager.py  signal_engine.py
auction-trader/python/auction_trader/storage/: __init__.py  execution_store.py  features_store.py  raw_store.py  signals_store.py
auction-trader/rust/auction-trader-core/: Cargo.toml
auction-trader/rust/auction-trader-core/crates/backtest/: Cargo.toml
auction-trader/rust/auction-trader-core/crates/backtest/src/: fill_model.rs  lib.rs  metrics.rs  position.rs  simulator.rs
auction-trader/rust/auction-trader-core/crates/core/: Cargo.toml
auction-trader/rust/auction-trader-core/crates/core/src/: config.rs  error.rs  lib.rs  types.rs
auction-trader/rust/auction-trader-core/crates/features/: Cargo.toml
auction-trader/rust/auction-trader-core/crates/features/src/: engine.rs  histogram.rs  lib.rs  order_flow.rs  value_area.rs  volatility.rs
auction-trader/rust/auction-trader-core/crates/ingestion/: Cargo.toml
auction-trader/rust/auction-trader-core/crates/ingestion/src/: bar_builder.rs  classifier.rs  lib.rs
auction-trader/rust/auction-trader-core/crates/pyo3_bindings/: Cargo.toml
auction-trader/rust/auction-trader-core/crates/pyo3_bindings/src/: lib.rs
auction-trader/tests/: __init__.py  conftest.py  test_config.py  test_position_manager.py  test_signal_engine.py  test_types.py
