[package]
name = "auction-features"
version.workspace = true
edition.workspace = true

[dependencies]
auction-core.workspace = true
auction-ingestion.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
ordered-float.workspace = true
statrs.workspace = true
tracing.workspace = true

[dev-dependencies]
approx.workspace = true
